[tool.poetry]
name = "blogger-crew"
version = "0.1.0"
description = ""
authors = ["James Hines <jameshines10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "^0.11.0"
gpt-researcher = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
